have been better.

-------------------------------------------------------------------------------

Wed Sep  8 18:19:45 PDT 1999
(Mandrake)

apparently I'm still out of sync.

-------------------------------------------------------------------------------

Wed Sep  8 19:47:28 PDT 1999
(Raster)

add new samples to brushed metal and disable the move resist sample since its 
annoying and doesnt work right...

-------------------------------------------------------------------------------

Wed Sep  8 20:01:58 PDT 1999
(Raster)

hmm how come this didnt get in?

-------------------------------------------------------------------------------

Wed Sep  8 20:24:28 PDT 1999
(KainX)

Fixed a typo in the KDE hint stuff.

Also removed old crappy themes to make room for newer, spiffier ones.

-------------------------------------------------------------------------------

Wed Sep  8 23:58:28 PDT 1999
(Raster)

account for bad X implimentatiosn that dont like negative W&h's for 
XDrawRectangle

-------------------------------------------------------------------------------

Thu Sep  9 10:06:29 PDT 1999
(Raster)

fix up some stuff (get rid of excess lines of padding)
allow alt-left mosue button drag to work on menus.

-------------------------------------------------------------------------------

Thu Sep  9 10:13:13 PDT 1999
(Raster)

save snap info when iconbox resizes :)

-------------------------------------------------------------------------------

Thu Sep  9 10:45:43 PDT 1999
(Raster)

have E snapshot the size and location of the iconbox when its in 
autoresize mode at its minimum size. :)

-------------------------------------------------------------------------------

Thu Sep  9 15:11:27 PDT 1999
(Mandrake)

added some function prototypes, fixed a merging conflict in kde.c

-------------------------------------------------------------------------------

Thu Sep  9 15:22:47 PDT 1999
(Mandrake)

somehow I lost some of this.  committing again.  (kde stuff for pager)