@@ -74,7 +74,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void 
+void
 KDE_ClientMessage(EWin * ewin, Atom atom, long data, Time timestamp)
 {
 
@@ -97,7 +97,7 @@ KDE_ClientMessage(EWin * ewin, Atom atom, long data, Time timestamp)
 
 }
 
-void 
+void
 KDE_ClientTextMessage(EWin * ewin, Atom atom, char *data)
 {
 
@@ -119,7 +119,7 @@ KDE_ClientTextMessage(EWin * ewin, Atom atom, char *data)
 
 }
 
-void 
+void
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -138,7 +138,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void 
+void
 KDE_AddModule(EWin * ewin)
 {
 
@@ -217,7 +217,7 @@ KDE_AddModule(EWin * ewin)
 
 }
 
-void 
+void
 KDE_RemoveModule(EWin * ewin)
 {
 
@@ -272,7 +272,7 @@ KDE_RemoveModule(EWin * ewin)
 
 }
 
-void 
+void
 KDE_Init(void)
 {
    /*
@@ -387,7 +387,7 @@ KDE_Init(void)
 
 }
 
-void 
+void
 KDE_Shutdown(void)
 {
 
@@ -412,7 +412,7 @@ KDE_Shutdown(void)
 
 }
 
-void 
+void
 KDE_ClientInit(EWin * ewin)
 {
 
@@ -442,7 +442,7 @@ KDE_ClientInit(EWin * ewin)
 
 }
 
-void 
+void
 KDE_ClientChange(EWin * ewin, XPropertyEvent * event)
 {
 
@@ -513,7 +513,7 @@ KDE_ClientChange(EWin * ewin, XPropertyEvent * event)
 
 }
 
-void 
+void
 KDE_GetDecorationHint(EWin * ewin, long *dechints)
 {
 
@@ -576,7 +576,7 @@ KDE_GetDecorationHint(EWin * ewin, long *dechints)
 
 }
 
-void 
+void
 KDE_CheckClientHints(EWin * ewin)
 {
 
@@ -599,7 +599,7 @@ KDE_CheckClientHints(EWin * ewin)
 
 }
 
-int 
+int
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -655,7 +655,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void 
+void
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -734,7 +734,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -788,7 +788,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ModuleAssert(EWin * ewin)
 {
 
@@ -802,7 +802,7 @@ KDE_ModuleAssert(EWin * ewin)
 
 }
 
-void 
+void
 KDE_PrepModuleEvent(EWin * ewin, KMessage msg)
 {
 
@@ -851,7 +851,7 @@ KDE_PrepModuleEvent(EWin * ewin, KMessage msg)
 
 }
 
-void 
+void
 KDE_SetRootArea(void)
 {
 
@@ -864,7 +864,7 @@ KDE_SetRootArea(void)
 
 }
 
-void 
+void
 KDE_HintChange(Atom a)
 {
 
@@ -872,7 +872,7 @@ KDE_HintChange(Atom a)
 
    if (a == KDE_CURRENT_DESKTOP)
      {
-	GotoDesktop(*(getSimpleHint(root.win, KDE_CURRENT_DESKTOP)));
+	GotoDesktop((*(getSimpleHint(root.win, KDE_CURRENT_DESKTOP)) - 1));
      }
    else if (a == KDE_NUMBER_OF_DESKTOPS)
      {
