@@ -1541,3 +1541,11 @@ Thu Sep  9 15:22:47 PDT 1999
 (Mandrake)
 
 somehow I lost some of this.  committing again.  (kde stuff for pager)
+
+-------------------------------------------------------------------------------
+
+Thu Sep  9 15:53:02 PDT 1999
+(Mandrake)
+
+kpanel's desktop switcher should work now.
+still needs some work.
